--- a/src/app.css
+++ b/src/app.css
@@ -54,7 +54,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--spacing-64)
+  gap: var(--spacing-64);
+  height: 100dvh;
 }
 
 ::-webkit-scrollbar {
@@ -156,10 +157,6 @@ body {
   justify-content: center;
   z-index: 1;
   height: 60px;
-}
-
-.SkillsSection {
-  margin-bottom: var(--spacing-32);
 }
 
 .AboutSection,
