--- a/src/app.css
+++ b/src/app.css
@@ -48,7 +48,7 @@ body {
 }
 
 body {
-  font-family: Inter;
+  font-family: 'Inter', sans-serif;
   color: var(--white-color);
   background-color: var(--black-color);
   display: flex;
